--- a/application/homeapi/view/brand_models/brand_models.html
+++ b/application/homeapi/view/brand_models/brand_models.html
@@ -6,6 +6,15 @@
   <div class="container">
     <section class="section-block pb-5 ">
       {include file="public/car-type-filter"  /}
+      <div class="loader text-center" style="display: none">
+        <div class="loader-inner line-scale-pulse-out">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
       <div class="product-card-list row">
         {foreach name="car_list" item="data"}
         <div class="col col-4">
@@ -41,14 +50,42 @@
 
 <script>
   var api = '../goods/car'
-  var url = api + "{$Think.get.sales_sum ? '&sales_sum='.$Think.get.sales_sum:''}{$Think.get.price?'&sales_sum='.$Think.get.price : ''}"
-
   function getList(page) {
-    var newUrl = url + '?page=' + page
+    var newUrl = api + (location.search ? location.search + '&':'?') + 'page=' + page;
+    console.log(newUrl)
+    $('.loader').show()
     $.ajax(newUrl, {
       type: 'POST',
       success: function(data) {
-        console.log(data)
+        var res = JSON.parse(data)
+        var arr = res.data.list
+        var html = ''
+        arr.forEach(function(element) {
+          html +=  '<div class="col col-4">\n' +
+            '            <div class="product-card">\n' +
+            '              <div class="product-card-img">\n' +
+            '                <a href="__URL__/brand_models_detail.html?goods_id='+element.goods_id+'"><img src="'+element['original_img']+'" alt=""></a>\n' +
+            '              </div>\n' +
+            '              <div class="product-card-content">\n' +
+            '                <h2 class="product-card-title">\n' +
+            '                    '+element['goods_name']+'\n' +
+            '                  <span class="float-right">已订购:<strong class="color-primary">'+element['sales_sum']+'</strong>台</span>\n' +
+            '                </h2>\n' +
+            '                <div class="product-card-intro"><strong>特点：</strong>'+element['goods_remark']+'</div>\n' +
+            '                <div class="product-card-btm clearfix">\n' +
+            '                  <div class="float-left product-card-price">\n' +
+            '                    <img src="__STATIC__/assets/images/common/icon-price.png" alt="">\n' +
+            '                    <span>价格：<strong>'+element['deposit_price']+'</strong>元</span>\n' +
+            '                  </div>\n' +
+            '                  <a class="product-card-btn c-btn c-btn__primary float-right" href="__URL__/brand_models_detail.html?goods_id='+element['goods_id']+'">立即购买</a>\n' +
+            '                </div>\n' +
+            '              </div>\n' +
+            '            </div>\n' +
+            '          </div>'
+        })
+
+          $('.loader').hide();
+        $('.product-card-list').html(html);
       }
     })
   }
