--- a/application/homeapi/view/auction/special_auction.html
+++ b/application/homeapi/view/auction/special_auction.html
@@ -87,7 +87,7 @@
             html +=  '<div class="col col-4">\n' +
               '            <div class="product-card">\n' +
               '              <div class="product-card-img">\n' +
-              '                <a href="__URL__/brand_models_detail.html?goods_id='+element.goods_id+'"><img src="'+element['original_img']+'" alt=""></a>\n' +
+              '                <a href="__URL__/special_auction_detail.html?auction_id='+element["id"]+'"><img src="'+element['original_img']+'" alt=""></a>\n' +
               '              </div>\n' +
               '              <div class="product-card-content">\n' +
               '                <h2 class="product-card-title">\n' +
@@ -100,7 +100,7 @@
               '                    <img src="__STATIC__/assets/images/common/icon-price.png" alt="">\n' +
               '                    <span>起拍价：<strong>'+element['price']+'</strong>元</span>\n' +
               '                  </div>\n' +
-              '                  <a class="product-card-btn c-btn c-btn__primary float-right" href="__URL__/brand_models_detail.html?goods_id='+element['goods_id']+'">立即购买</a>\n' +
+              '                  <a class="product-card-btn c-btn c-btn__primary float-right" href="__URL__/special_auction_detail.html?auction_id='+element["id"]+'">立即购买</a>\n' +
               '                </div>\n' +
               '              </div>\n' +
               '            </div>\n' +
