--- a/application/homeapi/view/integral_mall/integral_mall_list.html
+++ b/application/homeapi/view/integral_mall/integral_mall_list.html
@@ -11,33 +11,16 @@
           </div>
 
           <div class="type-filter car-type-filter">
-            <!-- <div class="type-filter-row">
-              <label>选择车型:</label>
-              <div class="d-inline">
-                <select class="selectpicker form-control form-control-sm" data-style="my-select" data-width="100px">
-                  <option>众泰</option>
-                  <option>大迈</option>
-                  <option>2016</option>
-                </select>
-              </div>
-            </div>
             <div class="type-filter-row">
-              <label></label>
+              <label>商品类型：</label>
               <ul class="filter" id="type-filter">
-                <li class="active">
-                  <a href="javascript:;">车系列</a>
-                </li>
-                <li>
-                  <a href="javascript:;">零件配置</a>
-                </li>
-                <li>
-                  <a href="javascript:;">车内饰品</a>
-                </li>
-                <li>
-                  <a href="javascript:;">其它物品</a>
-                </li>
+                {foreach $type as $item}
+                  <li class="{if $item.id==$Think.get.type} active {/if}">
+                    <a href="__URL__/integral_mall_list?type={$item.id}">{$item.name}</a>
+                  </li>
+                {/foreach}
               </ul>
-            </div> -->
+            </div>
             <div class="type-filter-row">
               <label>分类默认:</label>
               <ul class="filter">
