--- a/application/homeapi/view/public/three_box.html
+++ b/application/homeapi/view/public/three_box.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <div class="three-box-item text-center">
-        <a href="../seckill/one_dollar.html" style="background-image:url(__STATIC__/assets/images/ad-1.jpg)"></a>
+        <a href="../seckill/seckill.html" style="background-image:url(__STATIC__/assets/images/ad-1.jpg)"></a>
       </div>
     </div>
     <div class="col text-center">
