--- a/application/homeapi/view/integral_mall/integral_mall_detail.html
+++ b/application/homeapi/view/integral_mall/integral_mall_detail.html
@@ -98,8 +98,8 @@
       </div>
       <div class="product-list">
         <div class="product-card-list row">
-          
           {foreach $recommend_car.list as $item}
+            {if $detail.goods_id!=$item.goods_id}
             <div class="col col-4">
               <div class="product-card">
                 <div class="product-card-img">
@@ -122,6 +122,7 @@
                 </div>
               </div>
             </div>
+            {/if}
           {/foreach}
         </div>
       </div>
