--- a/application/homeapi/view/public/parts-type-filter.html
+++ b/application/homeapi/view/public/parts-type-filter.html
@@ -19,27 +19,12 @@
     </div>
     {/foreach}
     <div class="type-filter-row">
-      <label>分类默认:</label>
+      <label>配件分类:</label>
       <ul class="filter">
-        <li {if !$Think.get.sales_sum && !$Think.get.price} class="active" {/if}><a href="__URL__/parts.html" >默认</a></li>
-        <li {if $Think.get.sales_sum } class="active" {/if}>
-          <div class="sort-wrapper">
-            <span class="sort-txt"><a href="__URL__/parts.html?sales_sum={$Think.get.sales_sum == 'asc' ? 'desc' : 'asc'}">销量</a></span>
-            <div class="lamp">
-              <div class="icon-arr icon-arr__up {$Think.get.sales_sum == 'asc' ? 'active' : ''}"></div>
-              <div class="icon-arr icon-arr__down {$Think.get.sales_sum == 'desc' ? 'active' : ''}"" ></div>
-            </div>
-          </div>
-        </li>
-        <li {if $Think.get.price} class="active" {/if}>
-          <div class="sort-wrapper">
-            <span class="sort-txt"><a href="__URL__/parts.html?price={$Think.get.price == 'asc' ? 'desc' : 'asc'}">价格</a></span>
-            <div class="lamp">
-              <div class="icon-arr icon-arr__up {$Think.get.price == 'asc' ? 'active' : ''}"></div>
-              <div class="icon-arr icon-arr__down {$Think.get.price == 'desc' ? 'active' : ''}"" ></div>
-            </div>
-          </div>
-        </li>
+        <li {if !$Think.get.class_id} class="active" {/if}><a href="__URL__/parts.html{$Think.get.cat_id ? '?cat_id='.$Think.get.cat_id :''}" >默认</a></li>
+        {foreach $class as $item}
+          <li {if $Think.get.class_id && ($Think.get.class_id==$item.id) } class="active" {/if}><a href="__URL__/parts.html{$Think.get.cat_id ? '?cat_id='.$Think.get.cat_id.'&' : '?'}class_id={$item.id}" >{$item.name}</a></li>
+        {/foreach}
       </ul>
     </div>
   </div>
