--- a/application/homeapi/view/parts/parts.html
+++ b/application/homeapi/view/parts/parts.html
@@ -33,7 +33,7 @@
                     <div class="product-card-btm clearfix">
                       <div class="float-left product-card-price">
                         <img src="__STATIC__/assets/images/common/icon-price.png" class="icon" alt="">
-                        <span>价格：<strong>{$vo.price}</strong>元<span class="color-read"> {$vo.exchange_integral==1 ?'（积分可用）': ''}</span></span>
+                        <span>价格：<strong>{$vo.shop_price}</strong>元<span class="color-read"> {$vo.exchange_integral==1 ?'（积分可用）': ''}</span></span>
                       </div>
                       <a class="product-card-btn c-btn c-btn__primary float-right" href="../goods/parts_detail.html?goods_id={$vo['goods_id']}">立即订购</a>
                     </div>
