--- a/application/homeapi/view/seckill/seckill_detail.html
+++ b/application/homeapi/view/seckill/seckill_detail.html
@@ -150,8 +150,8 @@
                       <div class="product-card-btm clearfix">
                         <div class="float-left product-card-price">
                           <img src="assets/images/common/icon-integral.png" class="icon" alt="">
-                          <span>积分：<strong>{$item.moren_integral}</strong>积分</span>
-                          <span>剩余：<em>{$item.store_count}</em></span>
+                          <span>积分：<strong>{$item}</strong>积分</span>
+                          <span>剩余：<em>{$item}</em></span>
                         </div>
                         <a class="product-card-btn c-btn c-btn__primary float-right" href="../integral/integral_mall_detail.html?goods_id={$item.goods_id}">立即兑换</a>
                       </div>
