--- a/application/homeapi/view/integral_mall/integral_mall_detail.html
+++ b/application/homeapi/view/integral_mall/integral_mall_detail.html
@@ -67,9 +67,9 @@
         <div class="product-dec__body">
           <div class="product-actions">
             <div class="actions__left">
-              <div class="collection">
+              <div class="collection btn-collection">
                 <span class="icon float-left"></span>
-                收藏
+                <label>收藏</label>
               </div>
               <div class="product-additional">
                 <div class="additional-col">
