--- a/application/homeapi/view/parts/parts.html
+++ b/application/homeapi/view/parts/parts.html
@@ -27,7 +27,7 @@
                   <div class="product-card-content">
                     <h2 class="product-card-title">
                         {$vo.goods_name}
-                      <span class="float-right">已订购：<strong class="color-primary">{$vo.sales_sum}</strong>台</span>
+                      <span class="float-right">已订购：<strong class="color-primary">{$vo.sales_sum}</strong></span>
                     </h2>
                     <div class="product-card-intro"><strong>特点：</strong>{$vo.goods_remark}</div>
                     <div class="product-card-btm clearfix">
