--- a/application/homeapi/view/auction/special_auction_detail.html
+++ b/application/homeapi/view/auction/special_auction_detail.html
@@ -93,9 +93,9 @@
       <div class="actions-wrapper">
         <div class="product-actions">
           <div class="actions__left">
-            <div class="collection">
+            <div class="collection btn-collection" data-type="">
               <span class="icon float-left"></span>
-              收藏
+              <label>收藏</label>
             </div>
             <div class="product-additional">
               <div class="additional-col">
