--- a/application/homeapi/view/brand_models/brand_models.html
+++ b/application/homeapi/view/brand_models/brand_models.html
@@ -34,6 +34,10 @@
                   <span>价格：<strong>{$data.deposit_price}</strong>元</span>
                 </div>
                 <a class="product-card-btn c-btn c-btn__primary float-right" href="__URL__/brand_models_detail.html?goods_id={$data.goods_id}">立即购买</a>
+                <div class="collection btn-collection float-right" data-type="{$data.exchange_integral}" data-id="{$data.goods_id}">
+                  <span class="icon float-left"></span>
+                  <label>收藏</label>
+                </div>
               </div>
             </div>
           </div>
