--- a/application/homeapi/view/public/footer_ad.html
+++ b/application/homeapi/view/public/footer_ad.html
@@ -4,8 +4,8 @@
       <!-- Slides -->
       {foreach $footer_ads as $key=>$vo}
       <div class="swiper-slide">
-        <a href="{$vo[ad_link]}">
-          <img src="{$vo[ad_code]}" title="{$vo[title]}" width="100%" style="" alt=""/>
+        <a href="{$vo.ad_link}">
+          <img src="{$vo.ad_code}" title="{$vo.title}" width="100%" style="" alt=""/>
         </a>
       </div>
       {/foreach}
